[gd_scene load_steps=3 format=3 uid="uid://js8smcdtjw7x"]

[ext_resource type="Theme" uid="uid://cb3yrdhpxly8j" path="res://old/song_list_item.tres" id="1_uaqbn"]
[ext_resource type="Script" uid="uid://dql2jhlpgcnhd" path="res://old/song_list_item.gd" id="1_wlvms"]

[node name="SongListItem" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 42.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_uaqbn")
script = ExtResource("1_wlvms")

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_uaqbn")
theme_override_font_sizes/font_size = 24
text = "Artist - Title"
alignment = 0
text_overrun_behavior = 3

[node name="EditButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme = ExtResource("1_uaqbn")
theme_override_font_sizes/font_size = 24
text = "Edit"

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_down"]
[connection signal="button_down" from="EditButton" to="." method="_on_edit_button_down"]
